cabal-version:      2.4
name:               soqeye
version:            0.1.0.0


-- The license under which the package is released.
license: MIT
author:             NrdyBhu1
maintainer:         NrdyBhu1@gmail.com

extra-source-files: README.md

executable soqeye
    main-is:          Main.hs
    other-modules:     Game
                     , Logic
                     , Rendering
    build-depends:    base ^>=4.14.2.0, gloss >=1.13.2.1 
    hs-source-dirs:   app
    default-language: Haskell2010
